# anime_demoman_for_desktop

./: Cargo.toml  README.md
assets/models/: demoman.glb  testmodel.glb
src/: main.rs
src/assets/: game_assets.rs
src/game_objects/: demoman.rs  mod.rs  spinner.rs
src/player/: mod.rs  player.rs
