[package]
name = "anime_demoman_for_desktop"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.2", features = ["jpeg"]}
bevy_asset_loader = "0.20.1"
bevy_kira_audio = "0.19.0"
rand = "0.8.5"
mouse_position = "0.1.3"
blake3 = { version = "1.5.1", features = [ "pure" ] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[features]
# use --features "mute" in your cargo commands to not go insane during devel
mute = []