[package]
name = "anime_demoman_for_desktop"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.2", features = ["jpeg"]}
bevy_asset_loader = "0.20.1"
bevy_kira_audio = "0.19.0"
rand = "0.8.5"
mouse_position = "0.1.3"
blake3 = { version = "1.5.1", features = [ "pure" ] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# add --features "foo bar lol" as a space seperated list of the features you want.
[features]
# remove the audio features of the program so during devel you don't go insane.
mute = []
# framerate diagnostics.
no_diagnostics = []